--- a/contacts.html
+++ b/contacts.html
@@ -17,10 +17,10 @@
         <div class="logo"><a href="index.html">Miguel Pereira</a></div>
         <ul class="nav-links">
             <li><a href="index.html">Início</a></li>
-            <li><a href="#">Sobre Mim</a></li>
+            <li><a href="aboutme.html">Sobre Mim</a></li>
             <li><a href="#">Projetos</a></li>
             <li><a href="#">Curriculo</a></li>
-            <li><a href="#">Contacto</a></li>
+            <li><a href="contacts.html">Contacto</a></li>
         </ul>
     </div>
     <section id="contact-form">
