--- a/contacts.html
+++ b/contacts.html
@@ -19,7 +19,7 @@
             <li><a href="index.html">Início</a></li>
             <li><a href="aboutme.html">Sobre Mim</a></li>
             <li><a href="#">Projetos</a></li>
-            <li><a href="#">Curriculo</a></li>
+            <li><a href="cv.html">Curriculo</a></li>
             <li><a href="contacts.html">Contacto</a></li>
         </ul>
     </div>
