--- a/cv.html
+++ b/cv.html
@@ -26,7 +26,49 @@
     <div class="conteudo_principal">
         <div class="header">
             <div class="img-area">
-                <img src="" alt="">
+                <img src="./assets/foto1.jpeg" alt="">
+            </div>
+            <h1>Miguel Pereira</h1>
+            <h3>Web Developer</h3>
+        </div>
+        <div class="main">
+            <div class="left">
+               <h2>Informação Pessoal</h2>
+               <p><strong>Nome:</strong></p>Miguel Pereira</p>
+               <p><strong>Idade:</strong></p>18</p>
+               <p><strong>Email:</strong></p>miguelfrancapereira@gmail.com</p>
+               <p><strong>Nacionalidade:</strong></p>Portuguesa</p>
+               <p><strong>Telemóvel:</strong></p>964468050</p>
+               <h2>Habilidades</h2>
+               <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Python</li>
+                <li>Javascript</li>
+                <li>C#</li>
+                <li>SQL</li>
+                <li>PHP</li>
+               </ul>
+               <h2>Educação e Formação</h2>
+               <h3>12ºAno</h3>
+               <p>Colégio Internato dos Carvalhos</p>
+               <p>Curso Informática VT</p>
+            </div>
+            <div class="right">
+                <h2>Experiência Profissional</h2>
+                <h3>Estágio Profissional</h3>
+                <p><strong>Posição:</strong>Estagiário na Equipa de Desenvolvimento de Software</p>
+                <p><strong>Duração:</strong>24/08/2022 - 03/03/2023</p>
+                <ul>
+                    <li>Integrar uma equipa de desenvolvimento de aplicações informáticas;</li>
+                    <li>Desenvolver aplicações;</li>
+                    <li>Conhecer os conceitos de engenharia de software;</li>
+                    <li>Desenvolver e implementar soluções de Intranet e Internet;</li>
+                    <li> Efetuar a instalação, configuração e manutenção de computadores, periféricos,redes locais e sistemas operativos</li>
+                </ul>
+                <br>
+
+
             </div>
         </div>
     </div>
