navbar em mobile

--- a/cv.html
+++ b/cv.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Inter&display=swap" rel="stylesheet">    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="./css/navbar.css">
     <link rel="stylesheet" href="./css/cv.css">
 </head>
@@ -16,12 +17,20 @@
     <div class="navbar">
         <div class="logo"><a href="index.html"> Miguel Pereira</a></div>
         <ul class="nav-links">
-            <li><a href="index.html">Início</a></li>
-            <li><a href="aboutme.html">Sobre Mim</a></li>
-            <li><a href="#">Projetos</a></li>
-            <li><a href="cv.html">Curriculo</a></li>
-            <li><a href="contacts.html">Contacto</a></li>
+            <li><a href="index.html"><i class='bx bx-edit nav_icon'></i>Início</a></li>
+            <li><a href="aboutme.html"><i class='bx bx-user nav_icon'></i>Sobre Mim</a></li>
+            <li><a href="projects.html"><i class='bx bx-folder-open nav_icon'></i>Projetos</a></li>
+            <li><a href="cv.html"><i class='bx bxs-user-detail nav_icon'></i>Curriculo</a></li>
+            <li><a href="contacts.html"><i class='bx bx-mail-send nav_icon'></i>Contacto</a></li>
         </ul>
+        <ul class="nav-links_mobile">
+            <li><a href="index.html"><i class='bx bx-edit nav_icon'></i></a></li>
+            <li><a href="aboutme.html"><i class='bx bx-user nav_icon'></i></a></li>
+            <li><a href="projects.html"><i class='bx bx-folder-open nav_icon'></i></a></li>
+            <li><a href="cv.html"><i class='bx bxs-user-detail nav_icon'></i></a></li>
+            <li><a href="contacts.html"><i class='bx bx-mail-send nav_icon'></i></a></li>
+        </ul>
+
     </div>
     <div class="conteudo_principal">
         <div class="header">
@@ -57,8 +66,10 @@
             <div class="right">
                 <h2>Experiência Profissional</h2>
                 <h3>Estágio Profissional</h3>
-                <p><strong>Posição:</strong>Estagiário na Equipa de Desenvolvimento de Software</p>
-                <p><strong>Duração:</strong>24/08/2022 - 03/03/2023</p>
+                <p><strong>Posição:</strong><br>Estagiário na Equipa de Desenvolvimento de Software</p>
+                <p><strong>Duração:</strong><br>24/08/2022 - 03/03/2023</p>
+                <p><strong>Competências Adquiridas:</strong><br></p>
+
                 <ul>
                     <li>Integrar uma equipa de desenvolvimento de aplicações informáticas;</li>
                     <li>Desenvolver aplicações;</li>
