--- a/contacts.html
+++ b/contacts.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Inter&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="./css/navbar.css">
     <link rel="stylesheet" href="./css/contacts.css">
     <title>Página Principal</title>
@@ -16,12 +17,20 @@
     <div class="navbar">
         <div class="logo"><a href="index.html">Miguel Pereira</a></div>
         <ul class="nav-links">
-            <li><a href="index.html">Início</a></li>
-            <li><a href="aboutme.html">Sobre Mim</a></li>
-            <li><a href="#">Projetos</a></li>
-            <li><a href="cv.html">Curriculo</a></li>
-            <li><a href="contacts.html">Contacto</a></li>
+            <li><a href="index.html"><i class='bx bx-edit nav_icon'></i>Início</a></li>
+            <li><a href="aboutme.html"><i class='bx bx-user nav_icon'></i>Sobre Mim</a></li>
+            <li><a href="projects.html"><i class='bx bx-folder-open nav_icon'></i>Projetos</a></li>
+            <li><a href="cv.html"><i class='bx bxs-user-detail nav_icon'></i>Curriculo</a></li>
+            <li><a href="contacts.html"><i class='bx bx-mail-send nav_icon'></i>Contacto</a></li>
         </ul>
+        <ul class="nav-links_mobile">
+            <li><a href="index.html"><i class='bx bx-edit nav_icon'></i></a></li>
+            <li><a href="aboutme.html"><i class='bx bx-user nav_icon'></i></a></li>
+            <li><a href="projects.html"><i class='bx bx-folder-open nav_icon'></i></a></li>
+            <li><a href="cv.html"><i class='bx bxs-user-detail nav_icon'></i></a></li>
+            <li><a href="contacts.html"><i class='bx bx-mail-send nav_icon'></i></a></li>
+        </ul>
+
     </div>
     <section id="contact-form">
         <h2>Contacte-me</h2>
