Página de Projeto e Ultimos Retoques

--- a/cv.html
+++ b/cv.html
@@ -60,12 +60,13 @@
                </ul>
                <h2>Educação e Formação</h2>
                <h3>12ºAno</h3>
-               <p>Colégio Internato dos Carvalhos</p>
-               <p>Curso Informática VT</p>
+               <a class="link" href="https://cic.pt/index.asp" target="_blank"><p>Colégio Internato dos Carvalhos</p></a>
+               <a class="link"  href="https://cic.pt/index.asp?p=_/ofertaformativa/inf.html" target="_blank"><p>Curso Informática VT</p></a>
             </div>
             <div class="right">
                 <h2>Experiência Profissional</h2>
                 <h3>Estágio Profissional</h3>
+                <p><strong>Empresa:</strong><br>Winprovit</p>
                 <p><strong>Posição:</strong><br>Estagiário na Equipa de Desenvolvimento de Software</p>
                 <p><strong>Duração:</strong><br>24/08/2022 - 03/03/2023</p>
                 <p><strong>Competências Adquiridas:</strong><br></p>
