retoques depois da validação do w3c

--- a/aboutme.html
+++ b/aboutme.html
@@ -35,8 +35,9 @@
     <section class="conteudo">
         <h1>Hello World!</h1>
         <div class="buttons">
-            <a href="cv.html" target="_blank"><button>CV</button></a>
-            <a href="https://github.com/miguelfp17" target="_blank"><button>GITHUB</button></a>
+            <a href="cv.html" class="button-link" target="_blank">CV</a>
+            <a href="https://github.com/miguelfp17" class="button-link" target="_blank">GITHUB</a>
+            
         </div>
         <div class="texto">
             <p>Chamo-me Miguel Pereira, tenho 18 anos e adoro participar em qualquer projeto que envolva o desenvolvimento WEB. Desde o inicio do ensino secundário entendi que a programação era algo que eu queria fazer no futuro.</p>
