--- a/cv.html
+++ b/cv.html
@@ -43,11 +43,11 @@
         <div class="main">
             <div class="left">
                <h2>Informação Pessoal</h2>
-               <p><strong>Nome:</strong></p>Miguel Pereira</p>
-               <p><strong>Idade:</strong></p>18</p>
-               <p><strong>Email:</strong></p>miguelfrancapereira@gmail.com</p>
-               <p><strong>Nacionalidade:</strong></p>Portuguesa</p>
-               <p><strong>Telemóvel:</strong></p>964468050</p>
+               <p><strong>Nome:</strong>Miguel Pereira</p>
+               <p><strong>Idade:</strong>18</p>
+               <p><strong>Email:</strong>miguelfrancapereira@gmail.com</p>
+               <p><strong>Nacionalidade:</strong>Portuguesa</p>
+               <p><strong>Telemóvel:</strong>964468050</p>
                <h2>Habilidades</h2>
                <ul>
                 <li>HTML</li>
