--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <section id="conteudo_principal">
         <div id="texto">
             <p>Olá eu chamo-me Miguel Pereira, um Web Developer apaixonado por transformar ideias em realidades digitais<br>Explore este site para descobrir como posso contribuir nos seus projetos<br>Vamos construir algo juntos!</p>
-            <a href="contacts.html"><button id="botao_contacto">Contacte-me</button></a>
+            <a href="contacts.html" class="button-link">Contacte-me</a>
         </div>
         <div id="foto_perfil">
             <img src="./assets/logo.jpg" alt="">
